--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                 </tr>
                                 <tr>
                                   <td style="max-width: 10px;" >
-                                    <div id="carouselExampleControls" class="carousel slider" data-bs-ride="carousel">
+                                    <div id="carouselExampleControls" class="carousel slider" data-bs-touch="true" data-bs-interval="5000">
                                       <div class="carousel-inner slider">
                                         <div class="carousel-item active slider">
                                           <a href="your-link-here.html" class="card-link">
